0.4.3-dev:
[CLIENT]
* Migrated options format to JSON.
  * Fixed default options not changing on older clients.
[SERVER]
+ Added mod update checking with NotEnoughMods
  / Works on Minecraft 1.4.5-1.7.2
  / May be a bit rough around the edges.

0.4.2:
[CLIENT]
+ Added a Purge button, to wipe all AsieLauncher data. Use carefully.
+ The authentication now happens before the downloading and lets you try again.
* Fixed asset downloading.
* Fixed the password remember function.
[SERVER]
+ Heartbeats can now be ran independently of the file server.
+ The output location for AsieLauncher's local mode can now be changed.
* WARNING! LOCAL MODE IS NOW TO BE SELECTED IN CONFIG

0.4.1:
[CLIENT]
* Fix changelog option.
/ Major refactor. Might still be a tiny bit buggy.
[SERVER]
+ Window name is now set on the server side.

0.4.0:
[CLIENT]
/ Bump version.
[SERVER]
* Fix a bug where launcher.enabled did nothing.
/ Update modDB.

0.4.0-rc4 (server-only):
[SERVER]
+ Introduce modDB for filling in mods without mcmod.info.

0.4.0-rc3 (server-only):
[SERVER]
+ Add Forge v2 mod parsing (Immibis)
* Fix a few miscellaneous bugs.

0.4.0-rc2 (server-only):
[SERVER]
* Fix a bug where the URL was not sent to the serverlist.
* Fix error handling for mods and plugins.

0.4.0-rc1 (server-only):
[SERVER]
+ Send the mod and plugin list via the heartbeat! (Disableable in the config.)
+ The server now reads server.properties (when possible) to get whitelist/online mode information.
* Optimize heartbeat-sent data a bit further.
* Fix a few bugs.
/ Fix tabbing on all internal files.

0.4.0-beta9:
[CLIENT]
* Fix JAR repacking bug.
[SERVER]
* Fix using non-ZIP/JAR files as jarPatches.

0.4.0-beta8:
[CLIENT]
* Fix authentication bugs.
[SERVER]
+ Add sending server/client version via heartbeat.
+ Resolve ~ home paths for lookupDirectories.
* Invalidate the UUID accidentally spread in beta7.

0.4.0-beta7 (server-only):
[SERVER]
+ Completely change config file format.